--- a/public/brahmani_frontend_assets/css/responsive.css
+++ b/public/brahmani_frontend_assets/css/responsive.css
@@ -1656,7 +1656,13 @@ body {
 
 @media(min-width:924px) {
 
-
+	.Logo{
+		max-width: 70px !important;
+	}
+	.pbmit-slider-item .pbmit-title-bar-wrapper{
+		max-height: 600px !important; 
+		margin-top: 100px;
+	}
 	/*=== Title-Bar ===*/
 	.pbmit-title-bar-wrapper,
 	.pbmit-title-bar-content {
@@ -4623,6 +4629,13 @@ body {
 }
 
 @media (min-width: 768px) {
+	.Logo{
+		max-width: 70px !important;
+	}
+	.pbmit-slider-item .pbmit-title-bar-wrapper{
+		max-height: 600px !important; 
+		margin-top: 100px;
+	}
 	.pbmit-col-20 {
 		width: 20%;
 	}
