--- a/public/brahmani_frontend_assets/css/shortcode.css
+++ b/public/brahmani_frontend_assets/css/shortcode.css
@@ -5545,6 +5545,8 @@ body {
 	display: flex;
 	align-items: center;
 	background-color: rgba(64, 50, 38, 0.2);
+	width: calc(100vw);
+	height: calc(98vh);
 }
 .pbmit-slider-one .pbmit-sub-title{
 	font-size: 16px;
