--- a/public/brahmani_frontend_assets/css/responsive.css
+++ b/public/brahmani_frontend_assets/css/responsive.css
@@ -4059,7 +4059,7 @@ body {
 /********** Min Start **********/
 @media (min-width: 1400px) {
 .pbmit-slider-item .pbmit-title-bar-wrapper{
-	height: 800px;
+	min-height: 800px;
 }
 	.container,
 	.container-lg,
