--- a/public/brahmani_frontend_assets/css/shortcode.css
+++ b/public/brahmani_frontend_assets/css/shortcode.css
@@ -1762,7 +1762,7 @@ body {
 }
 @media(min-width:1500px) {
 	.pbmit-slider-item{
-		height: 750px !important;
+		min-height: 750px !important;
 	}
 }
 /** Style 2 **/
