--- a/public/brahmani_frontend_assets/css/shortcode.css
+++ b/public/brahmani_frontend_assets/css/shortcode.css
@@ -5547,6 +5547,7 @@ body {
 	align-items: center;
 	background-color: rgba(64, 50, 38, 0.2);
 	min-height: calc(100vh);
+	margin-top: 100px;
 	/* width: calc(100vw);
 	min-height: calc(100vh); */
 }
