--- a/public/brahmani_frontend_assets/css/style.css
+++ b/public/brahmani_frontend_assets/css/style.css
@@ -232,7 +232,7 @@
     left: 0;
     position: absolute;
 	z-index: 1;
-	background-image: url(../images/homepage-1/bg/paralax-image.jpg);
+	background-image: url(../images/overlay_image.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
