--- a/public/brahmani_frontend_assets/css/responsive.css
+++ b/public/brahmani_frontend_assets/css/responsive.css
@@ -4021,6 +4021,20 @@ body {
 		font-size: 14px;
 		line-height: 24px;
 	}
+	.banner_new-text {
+		position: absolute;
+		top: 68%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		color: white;
+		font-size: 3vw;
+		/* Responsive font size */
+		font-weight: bold;
+		text-align: center;
+		background: rgba(0, 0, 0, 0.5);
+		padding: 2vw 4vw;
+		border-radius: 1vw;
+	}
 }
 
 @media (max-width: 1024px) and (min-width: 768px) {
