--- a/public/brahmani_frontend_assets/css/responsive.css
+++ b/public/brahmani_frontend_assets/css/responsive.css
@@ -651,7 +651,20 @@ body {
 	.pbmit-slider-item .pbmit-title-bar-wrapper {
 		max-height: 600px !important;
 	}
-
+	.banner_new-text {
+		position: absolute;
+		top: 68% !important;
+		left: 50% !important;
+		transform: translate(-50%, -50%);
+		color: white;
+		font-size: 3vw;
+		/* Responsive font size */
+		font-weight: bold;
+		text-align: center;
+		background: rgba(0, 0, 0, 0.5);
+		padding: 2vw 4vw;
+		border-radius: 1vw;
+	}
 	.container,
 	.container-lg,
 	.container-md,
@@ -4894,5 +4907,22 @@ body {
 	.pbmit-ihbox-style-18 .pbmit-element-title {
 		font-size: 16px;
 		line-height: 26px;
+	}
+}
+
+@media(min-width: 300px) and (max-width: 500px) {
+	.banner_new-text {
+		position: absolute;
+		top: 68% !important;
+		left: 50% !important;
+		transform: translate(-50%, -50%);
+		color: white;
+		font-size: 3vw;
+		/* Responsive font size */
+		font-weight: bold;
+		text-align: center;
+		background: rgba(0, 0, 0, 0.5);
+		padding: 2vw 4vw;
+		border-radius: 1vw;
 	}
 }
